k8s/stable/stable-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ddd-ordering-stable
  namespace: ddd

spec:
  selector:
    app: ddd-ordering
    track: stable

  ports:
    - name: http
      port: 8081
      targetPort: 8081
